[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autograd"
version = "1.0.0"
authors = [
    { name="Adrian Potorski", email="adrian.potorski@outlook.com" }
]
description = "The minimalistic implementation of the autograd engine."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy"
]